--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,24 +1,22 @@
 <!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
-    </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+{{#each posts as |post|}}
+  <div class="row mb-4">
+    <div class="col">
+      <div class="card bg-dark">
+        <div class="card-body">
+          <div
+            class="bg-dark text-info d-flex justify-content-between align-items-center"
+          >
+            <h4>{{post.title}}</h4>
+            <span>{{post.user.name}}
+              {{format_date post.date_created}}</span>
+          </div>
+
+          <div class="card-text fs-5 text-white">{{post.content}}</div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
-    </p>
-  </div>
-</div>
 {{/each}}
+
+{{! Working on getting styling right for each card element on home screen }}
