--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,24 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Tech Blog</title>
-    <link rel="stylesheet" href="/css/jass.css" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
   </head>
 
-  <body>
+  <body style="background: #344234">
     <div class="flex-column justify-space-around">
-      <header class="display-flex justify-space-between align-center p-2">
-        <nav>
-          <a href="/">Home</a>
-          <a href="/dashboard">Dashboard</a>
+      <header class="p-3 bg-dark text-info">
+        <nav class="px-2 mb-2 d-flex gap-4">
+          <a href="/" class="fs-5 text-decoration-none text-success">Home</a>
+          <a
+            href="/dashboard"
+            class="fs-5 text-decoration-none text-success"
+          >Dashboard</a>
           <!-- Conditionally render login or logout links -->
           {{#if logged_in}}
-            <button class="no-button" id="logout">logout</button>
+            <button
+              class="no-button fs-5 text-decoration-none text-success"
+              id="logout"
+            >logout</button>
           {{else}}
-            <a href="/login">login</a>
+            <a
+              href="/login"
+              class="fs-5 text-decoration-none text-success"
+            >login</a>
           {{/if}}
         </nav>
-        <h1>The Tech Blog</h1>
+        <h1 class="d-inline-block p-2">The Tech Blog</h1>
       </header>
       <main class="container container-fluid mt-5">
         <!-- Render the sub layout -->
