--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,23 @@
-<div class="row">
-  <div class="col-md-6">
+<div class="row text-white">
+  <div class="col-6">
     <h2>Login</h2>
-
     <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+      <div class="mb-3">
+        <label for="email-login" class="form-label">Email:</label>
+        <input class="form-control" type="text" id="email-login" />
       </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+      <div class="mb-3">
+        <label for="password-login" class="form-label">Password:</label>
+        <input class="form-control" type="password" id="password-login" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+      <div class="mb-3">
+        <button class="btn btn-primary" type="submit">Login</button>
       </div>
     </form>
   </div>
+  <a id="signup" href="/signup" class="text-white text-decoration-none">Signup
+    instead
+  </a>
 </div>
 
 <script src="./js/login.js"></script>
