--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,9 @@
 <!-- Loop over each object in the projects array -->
 {{#each posts as |post|}}
-  <div class="row mb-4">
+  <a
+    class="bg-dark text-info d-flex justify-content-between align-items-center text-decoration-none mb-4 post"
+    href="/post/{{id}}"
+  >
     <div class="col">
       <div class="card bg-dark">
         <div class="card-body">
@@ -16,7 +19,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </a>
 {{/each}}
 
 {{! Working on getting styling right for each card element on home screen }}
