added functionality to delete post

--- a/views/partials/post-partial.handlebars
+++ b/views/partials/post-partial.handlebars
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <div class="add-comment d-none">
+    <div class="add-comment">
       <form id="create-comment" class="form-control">
         <label for="comment-title" class="form-label">Title</label>
         <input class="form-control" id="comment-title" />
