--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,10 +1,26 @@
-<div class="row">
-  {{#each posts as |post|}}
-    {{> post-partial post}}
-  {{/each}}
-</div>
+{{#each posts as |post|}}
+  <div class="row mb-4">
+    <div class="col">
+      <div class="card bg-dark">
+        <div class="card-body">
+          <a
+            class="bg-dark text-info d-flex justify-content-between align-items-center text-decoration-none post"
+            href="/post/{{id}}"
+          >
+            <h4>{{title}}</h4>
+            <span>Posted by
+              {{user.name}}
+              on
+              {{format_date date_created}}</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+{{/each}}
 
-<a href="/post" id="add-post" class="btn btn-info add-post">Post a new comment</a>
+<a href="/post" id="add-post" class="btn btn-info add-post w-100 m-auto">Post a
+  new comment</a>
 
 <script
   src="https://code.jquery.com/jquery-3.6.4.slim.min.js"
