--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -9,22 +9,30 @@
         on
         {{format_date post.date_created}}</span>
     </div>
-
-    <div class="card-text fs-5 text-white">{{post.content}}</div>
+    <div class="card-text fs-5 text-white mb-2">{{post.content}}</div>
   </div>
+  {{#if isPostOwner}}
+    <button class="btn btn-info update-button mb-2 mx-2">Update</button>
+    <button class="btn btn-danger delete-button mb-2 mx-2">Delete</button>
+  {{/if}}
 </div>
 
 {{#each comments as |comment|}}{{/each}}
 
-<div class="add-comment">
-  <form id="create-comment" class="form-control bg-dark text-info">
-    <label for="comment-title" class="form-label">Title</label>
-    <input class="form-control mb-2 bg-dark text-info" id="comment-title" />
-    <label for="comment-content" class="form-label">Comment</label>
-    <textarea
-      class="form-control mb-3 bg-dark text-info"
-      id="comment-content"
-    ></textarea>
-    <button type="submit" class="btn btn-info">Post comment</button>
-  </form>
-</div>
+{{#unless isPostOwner}}
+  <div class="add-comment">
+    <form id="create-comment" class="form-control bg-dark text-info">
+      <label for="comment-title" class="form-label">Title</label>
+      <input class="form-control mb-2 bg-dark text-info" id="comment-title" />
+      <label for="comment-content" class="form-label">Comment</label>
+      <textarea
+        class="form-control mb-3 bg-dark text-info"
+        id="comment-content"
+      ></textarea>
+
+      <button type="submit" class="btn btn-info">Post comment</button>
+    </form>
+  </div>
+{{/unless}}
+
+<script src="/js/post.js"></script>
