--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,13 +3,29 @@
     <div
       class="bg-dark text-info d-flex justify-content-between align-items-center post"
     >
-      <h4>{{post.title}}</h4>
-      <span>Posted by
-        {{post.user.name}}
-        on
-        {{format_date post.date_created}}</span>
+      {{! If the user who created the post is looking at it, they can modify it. otherwise it's read-only }}
+      {{#if isPostOwner}}
+        <input
+          class="post-title form-control bg-dark mb-2 text-info"
+          value={{post.title}}
+        />
+      {{else}}
+        <h4 class="post-title">{{post.title}}</h4>
+        <span>Posted by
+          {{post.user.name}}
+          on
+          {{format_date post.date_created}}</span>
+      {{/if}}
     </div>
-    <div class="card-text fs-5 text-white mb-2">{{post.content}}</div>
+    {{#if isPostOwner}}
+      <textarea
+        class="form-control bg-dark fs-5 text-info mb-2 post-content"
+      >{{post.content}}</textarea>
+    {{else}}
+      <div
+        class="card-text fs-5 text-white mb-2 post-content"
+      >{{post.content}}</div>
+    {{/if}}
   </div>
   {{#if isPostOwner}}
     <button class="btn btn-info update-button mb-2 mx-2">Update</button>
@@ -17,7 +33,14 @@
   {{/if}}
 </div>
 
-{{#each comments as |comment|}}{{/each}}
+{{#each comments as |comment|}}
+  <div class="card">
+    <div class="card-text">
+      {{comment.content}}
+      <p class="mt-3">{{comment.user_id}}, {{comment.date_created}}</p>
+    </div>
+  </div>
+{{/each}}
 
 {{#unless isPostOwner}}
   <div class="add-comment">
