--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -33,29 +33,29 @@
   {{/if}}
 </div>
 
-{{#each comments as |comment|}}
-  <div class="card">
-    <div class="card-text">
-      {{comment.content}}
-      <p class="mt-3">{{comment.user_id}}, {{comment.date_created}}</p>
-    </div>
-  </div>
-{{/each}}
-
 {{#unless isPostOwner}}
   <div class="add-comment">
     <form id="create-comment" class="form-control bg-dark text-info">
-      <label for="comment-title" class="form-label">Title</label>
-      <input class="form-control mb-2 bg-dark text-info" id="comment-title" />
       <label for="comment-content" class="form-label">Comment</label>
       <textarea
         class="form-control mb-3 bg-dark text-info"
         id="comment-content"
       ></textarea>
 
-      <button type="submit" class="btn btn-info">Post comment</button>
+      <button type="submit" class="btn btn-info">Submit</button>
     </form>
   </div>
 {{/unless}}
+
+{{#each post.comments as |comment|}}
+  <div class="card mb-3 p-2 bg-dark">
+    <div class="card-text text-white mb-2">
+      {{comment.content}}
+      <p class="m-0 text-info">-
+        {{comment.user_name}},
+        {{format_date comment.date_created}}</p>
+    </div>
+  </div>
+{{/each}}
 
 <script src="/js/post.js"></script>
