login and signup views toggle rather than load separate pages

--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,9 +1,12 @@
-<form id="create-post" class="form-control">
+<form id="create-post" class="form-control text-info bg-dark">
   <label for="post-title" class="form-label">Title</label>
-  <input class="form-control" id="post-title" />
+  <input class="form-control bg-dark text-white mb-3" id="post-title" />
   <label for="post-content" class="form-label">Comment</label>
-  <textarea class="form-control" id="post-content"></textarea>
-  <button type="submit" class="btn btn-primary">Create post</button>
+  <textarea
+    class="form-control bg-dark text-white mb-3"
+    id="post-content"
+  ></textarea>
+  <button type="submit" class="btn btn-info">Create post</button>
 </form>
 
 <script src="./js/post.js"></script>
