--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+{{! Login form }}
 <div class="row text-info" id="login-form">
   <div class="col-6">
     <h2>Login</h2>
@@ -25,6 +26,7 @@
   </div>
 </div>
 
+{{! Sign up form }}
 <div class="row text-info" id="signup-form" style="display:none">
   <div class="col-6">
     <h2>Signup</h2>
