bug fixes to dashboard and homeroutes

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -8,6 +8,7 @@
         <input
           class="post-title form-control bg-dark mb-2 text-info"
           value={{post.title}}
+          type="text"
         />
       {{else}}
         <h4 class="post-title">{{post.title}}</h4>
